New Boolean Solver: Doesn't cut an object (Suzanne) correctly when the mesh is open. #84493

Closed
opened 2021-01-07 15:13:01 +01:00 by Adrian Thomet · 15 comments

System Information
Operating system: Linux-5.8.0-7630-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1660 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.38

Blender Version
Broken:

  • version: 2.92.0 Alpha, branch: master, commit date: 2021-01-06 23:54, hash: a9c607e60e
  • This does also happen with the stable Blender version 2.91.
    Worked: ?

Short description of error
Suzanne doesn't get cut correctly and the mesh gets messed up. The bug happens, when the cutter cube passes through Suzanne's eyes.
It looks like the solver can't deal with an open mesh or multiple disconnected parts correctly.
When removing the separate eye part and filling the mesh so its closed, then the solver doesn't have a problem.
Using the old boolean solver, this bug doesn't seem to occur.

I made a short video to demonstrate the bug (Not from the blend file, that I uploaded!):

New_Boolean_Solver_Bug0001-0400.webm

Exact steps for others to reproduce the error
From Scratch:

  1. Create a new blend file.
  2. Add Suzanne into the scene.
  3. Add a cube.
  4. Optional: Put the cube into "Wire" mode to see the bug better.
  5. Move the cube into and around Suzanne's eyes.
    With the .blend file:
  6. Move the cube called "Cutter" into and around Suzanne's eyes.
    New Boolean Solver Bug.blend

Thanks!

**System Information** Operating system: Linux-5.8.0-7630-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1660 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.38 **Blender Version** Broken: * version: 2.92.0 Alpha, branch: master, commit date: 2021-01-06 23:54, hash: `a9c607e60e` * This does also happen with the stable Blender version 2.91. Worked: ? **Short description of error** Suzanne doesn't get cut correctly and the mesh gets messed up. The bug happens, when the cutter cube passes through Suzanne's eyes. It looks like the solver can't deal with an open mesh or multiple disconnected parts correctly. When removing the separate eye part and filling the mesh so its closed, then the solver doesn't have a problem. Using the old boolean solver, this bug doesn't seem to occur. I made a short video to demonstrate the bug (Not from the blend file, that I uploaded!): [New_Boolean_Solver_Bug0001-0400.webm](https://archive.blender.org/developer/F9554256/New_Boolean_Solver_Bug0001-0400.webm) **Exact steps for others to reproduce the error** *From Scratch:* 1. Create a new blend file. 2. Add Suzanne into the scene. 3. Add a cube. 4. **Optional:** Put the cube into "Wire" mode to see the bug better. 5. Move the cube into and around Suzanne's eyes. *With the .blend file:* 1. Move the cube called "Cutter" into and around Suzanne's eyes. [New Boolean Solver Bug.blend](https://archive.blender.org/developer/F9554245/New_Boolean_Solver_Bug.blend) Thanks!
Author

Added subscriber: @EnergieReaktor

Added subscriber: @EnergieReaktor

Added subscriber: @rjg

Added subscriber: @rjg

If you enable Self this should work as intended.

If you enable *Self* this should work as intended.
Member

Added subscribers: @howardt, @HooglyBoogly

Added subscribers: @howardt, @HooglyBoogly
Member

Not always:

image.png

I don't think the new boolean method is always expected to work with non-manifold inputs. So I'd lean to calling this a known issue instead of a bug. But maybe there is a possible fix when one of the two inputs is manifold?

We should leave it to @howardt to make the final decision here. I couldn't find a task listing known issues or bugs with the Exact boolean method, that might be helpful.

Not always: ![image.png](https://archive.blender.org/developer/F9554540/image.png) I don't think the new boolean method is always expected to work with non-manifold inputs. So I'd lean to calling this a known issue instead of a bug. But maybe there is a possible fix when one of the two inputs is manifold? We should leave it to @howardt to make the final decision here. I couldn't find a task listing known issues or bugs with the Exact boolean method, that might be helpful.

I agree that @howardt should decide on this. However, your screenshot seems to show that it is working, the "cutter" is subtracted from "Suzanne". Did I misunderstand the issue?

I agree that @howardt should decide on this. However, your screenshot seems to show that it is working, the "cutter" is subtracted from "Suzanne". Did I misunderstand the issue?
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

In #84493#1089206, @rjg wrote:
However, your screenshot seems to show that it is working, the "cutter" is subtracted from "Suzanne". Did I misunderstand the issue?

Think the cutter is in wireframe display mode, so if its polys show, boolean acts like Union (where it should be Difference), so there is indeed something wrong.
Same is true the other way around, if the modifier is set to Union, it sometimes acts like Difference instead...

> In #84493#1089206, @rjg wrote: > However, your screenshot seems to show that it is working, the "cutter" is subtracted from "Suzanne". Did I misunderstand the issue? Think the cutter is in wireframe display mode, so if its polys show, boolean acts like `Union` (where it should be `Difference`), so there is indeed something wrong. Same is true the other way around, if the modifier is set to `Union`, it sometimes acts like `Difference` instead...

@lichtwerk You're right, I've been able to reproduce this now as well. This happens when the cutter starts to intersect the inner ear.

@lichtwerk You're right, I've been able to reproduce this now as well. This happens when the cutter starts to intersect the inner ear.
Member

This is indeed a case where Exact Boolean cannot use its usual code and has to fall back to "maybe it will work" code, because Suzanne is not manifold, even with eyes removed.

I am currently working on trying raycasting as an alternative or replacement to the generalized-winding-number fallback that I use now. That is more in line with what Fast Boolean does (which, to be clear, also doesn't work in all cases). That may make the user happier here. But right now, this is in the "known issue" camp.

This is indeed a case where Exact Boolean cannot use its usual code and has to fall back to "maybe it will work" code, because Suzanne is not manifold, even with eyes removed. I am currently working on trying raycasting as an alternative or replacement to the generalized-winding-number fallback that I use now. That is more in line with what Fast Boolean does (which, to be clear, also doesn't work in all cases). That may make the user happier here. But right now, this is in the "known issue" camp.

This issue was referenced by 6f63417b50

This issue was referenced by 6f63417b500d0893e89fef1ecddb9ff345322e96
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Howard Trickey self-assigned this 2021-02-07 17:33:14 +01:00
Member

That latest commit make new boolean work in this case (though it is still the case that there are no guarantees when all operands are not volume-enclosing.

That latest commit make new boolean work in this case (though it is still the case that there are no guarantees when all operands are not volume-enclosing.

This issue was referenced by 55c82d8380

This issue was referenced by 55c82d8380ea3fd37a9d966fad10f42cc5b365d5
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84493
No description provided.